<resources>
    <string name="app_name">Asteroids Home</string>
    <string name="signed_in">Signed in!</string>
    <string name="signed_out">Signed out!</string>
    <string name="signed_cancelled">Signed in cancelled</string>
    <string name="logout_button">Logout</string>
    <string name="firebase_user_fmt">Firebase User: %s</string>
    <string name="apiKey">7OuDmkW9oxSB1zjUEYfNoLKhcMhe2zF9qgeTqhoV</string>
    <string name="detallesAsteroide">DETALLES DEL ASTEROIDE:</string>
    <string name="idAsteroide">ID:</string>
    <string name="nameAsteroide">Name:</string>
    <string name="magnitudeAsteroide">Magnitud Absoluta:</string>
    <string name="isDangerous">Es Peligroso:</string>
    <string name="diametroEstimado">DIAMETRO ESTIMADO</string>
    <string name="kilometrosMin">Kilómetros Min</string>
    <string name="kilometrosMax">Kilómetros Max</string>
    <string name="metrosMin">Kilómetros Min</string>
    <string name="metrosMax">Kilómetros Max</string>
    <string name="millasMin">Millas Min</string>
    <string name="millasMax">Millas Max</string>
    <string name="feetMin">Feet Min</string>
    <string name="feetMax">Feet Max</string>
    <string name="datosAcercamiento">DATOS DEL ACERCAMIENTO:</string>
    <string name="fechaAcercamiento">Fecha del Acercamiento</string>
    <string name="velocidadAcercamiento">Velocidad (Km por segundo):</string>
    <string name="distanciaAstronomica">Distancia Astronómica:</string>
    <string name="distanciaLunar">Distancia Lunar:</string>
    <string name="distanciaKm">Distancia Kilómetros:</string>
    <string name="orbitando">Orbitando:</string>
    <string name="datosOrbita">DATOS DE LA ÓRBITA:</string>
    <string name="intersectionMinOrbita">Intersección Min de la Orbita:</string>
    <string name="parametroTisserand">Parámetro de Tisserand:</string>
    <string name="osculacion">Época de osculación:</string>
    <string name="excentricidad">Excentricidad:</string>
    <string name="semiEjeMayor">Semieje mayor:</string>
    <string name="inclinacion">Inclinación:</string>
    <string name="longitudNodo">Longitud Nodo Ascendente:</string>
    <string name="periodoOrbital">Período Orbital:</string>
    <string name="distanciaPerihelio">Distancia del Perihelio:</string>
    <string name="argumentoPerihelio">Argumento del Perihelio:</string>
    <string name="distanciaAfelio">Distancia del Afelio:</string>
    <string name="tiempoPerihelio">Tiempo del Perihelio:</string>
    <string name="equinox">Equinox:</string>
    <string name="tipoOrbita">Tipo Órbita:</string>
    <string name="rangoOrbita">Rango de la Órbita:</string>
    <string name="btnGuardar">Guardar Historial:</string>
    <string name="dateInitial">Fecha Inicial:</string>
    <string name="dateEnd">Fecha Final:</string>
    <string name="nAsteroides">Número de Asteroides:</string>
    <string name="lamp">Estado Lámpara:</string>
    <string name="gridName">Nombre:</string>
    <string name="gridMagnitude">Magnitud Abs:</string>
    <string name="gridDate">Fecha:</string>
    <string name="gridDangerous">Peligroso:</string>
    <string name="gridDistance">Distancia (km):</string>
    <string name="gridCodigo">Código</string>
    <string name="btnBuscar">Buscar</string>
</resources>
